deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: console-plugin-vsphere-connection
  name: console-plugin-vsphere-connection
  namespace: console-plugin-vsphere-connection
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: console-plugin-vsphere-connection
  template:
    metadata:
      labels:
        app: console-plugin-vsphere-connection
    spec:
      containers:
      - name: console-plugin-vsphere-connection
        image: quay.io/mlibra/console-plugin-vsphere-connection:latest
        imagePullPolicy: Always
        ports:
          - name: ui
            containerPort: 9443
            protocol: TCP
        volumeMounts:
          - name: certs-secret
            mountPath: "/var/serving-cert"
            readOnly: true
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /plugin-entry.js
            port: ui
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /plugin-entry.js
            port: ui
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 3m
            memory: 40Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 15
      volumes:
        - name: certs-secret
          secret:
            secretName: console-plugin-vsphere-connection-tls
