deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: console-plugin-vsphere-connection
  name: console-plugin-vsphere-connection
  namespace: VSPHERE_NAMESPACE
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: console-plugin-vsphere-connection-tls
spec:
  internalTrafficPolicy: Cluster
  selector:
    app: console-plugin-vsphere-connection
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  sessionAffinity: None
  type: ClusterIP
