deployment/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: console-plugin-vsphere-connection
  name: vsphere-plugin
  namespace: console-plugin-vsphere-connection
spec:
  # host: vsphere-plugin
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: console-plugin-vsphere-connection
  wildcardPolicy: None
